tests/neg/binaryAPI-not-visible.check
-- [E173] Reference Error: tests/neg/binaryAPI-not-visible.scala:15:4 --------------------------------------------------
15 |  a.p // error
   |  ^^^
   |  value p cannot be accessed as a member of (a : foo.A) from module class binaryAPI-not-visible$package$.
-- [E173] Reference Error: tests/neg/binaryAPI-not-visible.scala:16:4 --------------------------------------------------
16 |  a.a // error
   |  ^^^
   |  value a cannot be accessed as a member of (a² : foo.A) from module class binaryAPI-not-visible$package$.
   |
   |  where:    a  is a value in class A
   |            a² is a parameter in method test
-- [E173] Reference Error: tests/neg/binaryAPI-not-visible.scala:17:4 --------------------------------------------------
17 |  a.b // error
   |  ^^^
   |  lazy value b cannot be accessed as a member of (a : foo.A) from module class binaryAPI-not-visible$package$.
-- [E173] Reference Error: tests/neg/binaryAPI-not-visible.scala:18:4 --------------------------------------------------
18 |  a.c // error
   |  ^^^
   |  variable c cannot be accessed as a member of (a : foo.A) from module class binaryAPI-not-visible$package$.
-- [E173] Reference Error: tests/neg/binaryAPI-not-visible.scala:19:4 --------------------------------------------------
19 |  a.d // error
   |  ^^^
   |  method d cannot be accessed as a member of (a : foo.A) from module class binaryAPI-not-visible$package$.
-- [E173] Reference Error: tests/neg/binaryAPI-not-visible.scala:20:4 --------------------------------------------------
20 |  a.e // error
   |  ^^^
   |given instance e cannot be accessed as a member of (a : foo.A) from module class binaryAPI-not-visible$package$.
-- [E173] Reference Error: tests/neg/binaryAPI-not-visible.scala:21:4 --------------------------------------------------
21 |  a.f(using 1.0) // error
   |  ^^^
   |given instance f cannot be accessed as a member of (a : foo.A) from module class binaryAPI-not-visible$package$.
